# test_task

./: .env  .flake8  .gitignore  alembic.ini  config.py  database.py  main.py  pyproject.toml  test21.db
crud/: crud.py
migrations/: README  env.py
migrations/versions/: f2708c49f6aa_initial_migration.py
models/: models.py
routers/: task.py
schemas/: schemas.py
