[tool.poetry]
name = "new"
version = "0.1.0"
description = ""
authors = ["Nikita <erofeev.nik.it@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["all"], version = "^2.0.23"}
fastapi = {extras = ["all"], version = "^0.104.1"}
black = "^23.11.0"
alembic = "^1.12.1"
greenlet = "^3.0.1"
aiosqlite = "^0.19.0"
logger = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
